<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_manage_vets"
            android:icon="@drawable/ic_manage"
            android:title="@string/menu_manage_vets" />
        <item
            android:id="@+id/nav_manage_animals"
            android:icon="@drawable/ic_animal"
            android:title="@string/menu_manage_animals" />
    </group>
</menu>
