<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:padding="16dp"
    tools:context=".view.ResetPasswordActivity">

    <!-- Logo en la parte superior de la pantalla -->
    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="318dp"
        android:layout_height="307dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo_vet_prohub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de texto para el email con ícono de correo y texto de ayuda -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailReset"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:endIconMode="clear_text"
        app:helperText="@string/helperText_email_reset"
        app:startIconDrawable="@drawable/ic_contact_mail"
        app:layout_constraintTop_toBottomOf="@id/ivLogoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="48dp"
        android:paddingEnd="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Botón para restablecer la contraseña -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetReset"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:icon="@drawable/ic_check"
        app:layout_constraintTop_toBottomOf="@id/tilEmailReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para ir a la pantalla de inicio de sesión -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginReset"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        app:layout_constraintTop_toBottomOf="@id/btnResetReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
